<resources>
    <string name="app_name">TeamUP</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_subtitle">Sign in with your account</string>
    <string name="continue_with">Or continue with:</string>
    <string name="not_account">You do not have an account?</string>
    <string name="register_now">Register now</string>
    <string name="forgot_password">I forgot my password</string>
    <string name="password_invalid">Invalid password</string>
    <string name="auth_error">Authentication Failed</string>
    <string name="auth_successful">Authentication Successful</string>
    <string name="create_account">Create your account</string>
    <string name="register_with">Or register with:</string>
    <string name="have_account">Do you already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="name">Name</string>
    <string name="privacy">Privacy policy</string>
    <string name="passwords_distinct">Passwords do not match</string>
    <string name="empty_fields">Fields cannot be empty</string>
    <string name="should_accept_privacy">You should accept the privacy policy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="standings">Standings</string>
    <string name="matches">Matches</string>
    <string name="profile">Profile</string>
    <string name="equipoLiga">Team</string>
    <string name="pos">Pos</string>
    <string name="m">M</string>
    <string name="w">W</string>
    <string name="d">D</string>
    <string name="l">L</string>
    <string name="pts">PTS</string>
    <string name="gd">GD</string>
    <string name="player">Player</string>
    <string name="goals">Goals</string>
    <string name="amount">Amount</string>
    <string name="myleague">My leagues</string>
    <string name="createleague">Create league</string>
    <string name="joinleague">Join league</string>
    <string name="unknown">Unknown</string>
    <string name="accept">Accept</string>
    <string name="camcel">Cancel</string>

</resources>