<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="2">

        <!-- TextView Welcome -->
        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/welcome"
            android:textColor="@color/secondary"
            android:textSize="22sp" />

        <!-- TextView Create Your Account -->
        <TextView
            android:id="@+id/textViewCreateYourAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/sign_in_subtitle"
            android:textColor="@color/secondary"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:weightSum="2">

        <!-- TextInputLayout Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextFieldEmailLogin"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/prompt_email"
            app:startIconDrawable="@drawable/email_icon">

            <EditText
                android:id="@+id/editTextEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- TextInputLayout Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextFieldPasswordLogin"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/prompt_password"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/key_icon">

            <EditText
                android:id="@+id/editTextPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- TextView Forgot Password -->
        <TextView
            android:id="@+id/textViewLoginForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/forgot_password"
            android:textColor="@color/secondary"
            android:textSize="14sp" />

        <!-- Button Sign In -->
        <Button
            android:id="@+id/ButtonLoginSignIn"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/support1"
            android:text="@string/sign_in"
            android:textColor="@color/secondary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="2">

        <!-- TextView Continue With -->
        <TextView
            android:id="@+id/textViewLoginContinueWith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/continue_with"
            android:textColor="@color/secondary"
            android:textSize="12sp" />

        <!-- LinearLayout con las imágenes -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="2">

            <!-- ImageView Google -->
            <ImageView
                android:id="@+id/imageViewGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/google_login" />

            <!-- ImageView Facebook -->
            <ImageView
                android:id="@+id/imageViewFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/facebook_login" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/dividerLogin"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/secondary"
        android:backgroundTint="@color/secondary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <!-- TextView Not Account -->
        <TextView
            android:id="@+id/textViewLoginNotAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/not_account"
            android:textColor="@color/secondary"
            android:textSize="14sp" />

        <!-- TextView Register Now -->
        <TextView
            android:id="@+id/textViewLoginRegisterNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/register_now"
            android:textColor="@color/support1"
            android:textSize="14sp" />
    </LinearLayout>


</LinearLayout>

